tests/src/errors/methodDestructure/arr.spec.7.ts
{
	const arr = [1, 2, 3, 4];
	const { isEmpty } = arr;
}
